# alibaba-ai-coding-eval

./: .gitignore  AGENTS.md  README.md
.opencode/commands/: llm-eval-report.md  llm-eval.md
docker/vllm-bench/: .env.example  64k-concurrency-plan.md  Dockerfile  README.md  compose.yaml
docs/: alicloud.html  benchmark.html  cli-eval.html  cost.html  harness-eval.html  index.html  qoder.html  security.html  self-hosted.html
docs-self-hosted/: index.html  sources.md
docs-self-hosted/self-hosted/: benchmark.html  index.html  infra.html  models.html  serving.html
docs/self-hosted/: assessment.html  benchmark.html  deepseek-v4.html  evaluation.html  glm-5.2.html  index.html  infra.html  models.html  serving.html  style.css
eval-repos/eval-cc/: README.md  pyproject.toml
eval-repos/eval-qoder/: pyproject.toml
eval-repos/eval-qoder/app/: main.py
eval-repos/eval-qoder/app/api/v1/: users.py
eval-repos/eval-qoder/app/api/v2/: comments.py
eval-repos/eval-qoder/app/auth/: decorators.py  middleware.py  token.py
eval-repos/eval-qoder/app/models/: database.py
eval-repos/eval-qoder/app/schemas/: schemas.py  tags.py
eval-repos/eval-qoder/tests/: test_comments.py  test_posts.py  test_tags.py  test_users.py
eval-repos/eval-qoder/user_management_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
eval-results/session1/: cc-step1.json  cc-step2.json  cc-step3.json  cc-step4.json  cc-step5.json  qoder-step1.json  qoder-step2.json  (+3 more)
eval-tools/: discover_tests.py  run_pair_eval.py  static_compare.py  summarize_metrics.py
how-to/: generate-coding-plan-api-key.md
(+56 files in other folders)
